--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"editor.tabSize": 2
+  "editor.tabSize": 2,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    { "language": "svelte", "autoFix": true }
+  ],
+  "svelte.plugin.typescript.diagnostics.enable": false,
+  "svelte.plugin.typescript.hover.enable": false
 }
