--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "lint": "eslint --quiet src --ext .js,.svelte || exit 0"
   },
   "dependencies": {
     "compression": "^1.7.1",
